# min-curvature-race-line

./: .gitignore  README.md  pyproject.toml
.github/workflows/: report.yml  tests.yml
src/: track.py
src/raceline/: __init__.py  cli.py  optimizer.py  plotting.py  point_mass.py  simulator.py  speed_profile.py  track.py  vehicle.py
src/use_example/Austin/: optimize_austin.py
src/use_example/Budapest/: optimize_budapest.py
tests/: test_optimizer.py  test_plotting.py  test_point_mass.py  test_simulator.py  test_speed_profile.py  test_track.py  test_vehicle.py
