[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "min-curvature-race-line"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "cvxpy>=1.5",
    "matplotlib",
]

[project.scripts]
raceline = "raceline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
strict = true
disallow_any_explicit = true
disallow_any_generics = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  "D",   # pydocstyle 
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
